Fixes homeworld spacing

--- a/src/components/CharacterCard/CharacterCard.scss
+++ b/src/components/CharacterCard/CharacterCard.scss
@@ -32,6 +32,8 @@
   position: absolute;
   top: -8px;
   left: 62px;
+  width: 150px;
+  text-align: left;
   font-size: 20px;
   font-weight: 600;
 }
